<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3"
    android:background="@color/grey_light"
    android:paddingLeft="@dimen/dimen_20"
    android:paddingRight="@dimen/dimen_20">

    <TextView
        android:id="@+id/panggilan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dimen_70"
        android:text="@string/h_nama"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etPanggilan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/panggilan"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dimen_10"
        android:hint="@string/contoh_panggilan" />

    <TextView
        android:id="@+id/umur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/etPanggilan"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dimen_30"
        android:text="@string/h_umur"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/etUmur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/umur"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/dimen_10"
        android:hint="@string/contoh_umur" />

    <Button
        android:id="@+id/btnSelanjutnya"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/selanjutnya"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/dimen_50"
        android:layout_marginRight="@dimen/dimen_50"
        android:layout_marginBottom="@dimen/dimen_40"
        android:textColor="@color/black"
        android:backgroundTint="@color/yellow"
        />

</androidx.constraintlayout.widget.ConstraintLayout>